Make SQL in DownloadDatabase SQLite pre 3.8.3 compatible

printf() was added in SQLite 3.8.3 so need to use other older
methods to generate the GUID.
third_party/sqlite/sqlite.gyp lists 3.6.1 as required version at the
time of writing

BUG=606772

Review-Url: https://codereview.chromium.org/1897153005
Cr-Commit-Position: refs/heads/master@{#393813}

Former-commit-id: dbbc7ddf2e5c2f3f72718bd5e807fa3e6ccad641